# attention_residuals

./: README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
attnres_hf_patch/: __init__.py  attnres_adapter.py  attnres_state.py  config.py  modeling_llama_attnres.py
attnres_repro/: README.md  __init__.py  evaluate.py  requirements.txt  train.py
attnres_repro/configs/: baseline_toy.yaml  block_attnres_toy.yaml
attnres_repro/models/: attnres.py
attnres_repro/tests/: test_attnres.py  test_block_attnres.py  test_shapes.py
attnres_repro/utils/: metrics.py
configs/: baseline_llama_paper16.yaml  block_attnres_llama_paper16_b6.yaml  full_attnres_llama_paper16.yaml  full_attnres_llama_smoke.yaml  full_attnres_toy.yaml
models/: __init__.py  layers.py  norms.py  transformer.py
scripts/: download_openwebtext2.py  download_wikitext103.py  prepare_text_dataset.py
tests/: test_attnres.py  test_attnres_logging.py  test_block_attnres.py  test_hf_attnres.py  test_shapes.py
utils/: data.py  logging_utils.py
