[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-residuals-repro"
version = "0.1.0"
description = "PyTorch reproduction of Attention Residuals" 
readme = "attnres_repro/README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "pyyaml",
    "pytest",
    "numpy"
]
packages = [{"include": "attnres_repro"}]
